--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,9 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
+	.checkboxes {
+		margin-bottom: 2em;
+	}
 /* Container */
 
 	.container {
@@ -2206,7 +2209,7 @@ input, select, textarea {
 	}
 
 		#banner header {
-			background-color: rgba(34, 30, 31, 0.98);
+			background-color: rgba(34, 30, 31, 0.68);
 			display: inline-block;
 			padding: 2.5em 5em;
 			border-radius: 5px;
