--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2108,7 +2108,8 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
-		margin: 2.5em 0 0 0;
+		text-align: center;
+		margin: 1.5em 0 .5em 0;		
 	}
 
 		#nav > ul {
@@ -2127,7 +2128,7 @@ input, select, textarea {
 
 				#nav > ul > li > a {
 					border-radius: 5px;
-					color: #5d5d5d;
+					color: #e0e0e0;
 					text-decoration: none;
 					padding: 0.6em 1.2em 0.6em 1.2em;
 					-moz-transition: background-color .25s ease-in-out;
